--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,8 @@
                 <a href="company.html" class="mobile-nav-link">Company</a>
                 <a href="internship.html" class="mobile-nav-link">Internship</a>
                 <a href="contact.html" class="mobile-nav-link">Contact</a>
+                <a href="login.html" class="mobile-nav-link"
+                    style="color: var(--secondary); font-weight: 700;">Login</a>
             </div>
         </div>
     </nav>
