Fix admin dashboard responsiveness

--- a/client/admin-dashboard.html
+++ b/client/admin-dashboard.html
@@ -69,6 +69,9 @@
                         <option value="Full Stack Development">Full Stack Development</option>
                         <option value="App Development">App Development</option>
                         <option value="UI/UX Design">UI/UX Design</option>
+                        <option value="Web Development">Web Development</option>
+                        <option value="Design & CAD">Design & CAD</option>
+                        <option value="Python Development">Python Development</option>
                     </select>
                 </div>
                 <button type="submit" class="btn-submit">Create User</button>
@@ -87,6 +90,7 @@
                             <tr>
                                 <th>Student</th>
                                 <th>Domain</th>
+                                <th>Certificate</th>
                                 <th>Task Links</th>
                             </tr>
                         </thead>
