--- a/client/company.html
+++ b/client/company.html
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- About Section -->
-    <section id="about" class="section-padding section-wrapper bg-gray-50" style="margin-top: 80px;">
+    <section id="company" class="section-padding section-wrapper bg-light content-offset">
         <div class="container">
             <div class="about-grid">
                 <div>
