--- a/client/contact.html
+++ b/client/contact.html
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Contact Section -->
-    <section id="contact" class="section-padding section-wrapper bg-white" style="margin-top: 80px;">
+    <section id="contact" class="section-padding section-wrapper bg-white content-offset">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Get in Touch</h2>
@@ -78,7 +78,7 @@
                             </div>
                             <div>
                                 <p style="font-weight: 600; color: var(--gray-300);">Email</p>
-                                <p style="font-weight: 500;">support@tvarix.in</p>
+                                <p style="font-weight: 500;">faindno.1@gmail.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -93,7 +93,7 @@
                             </div>
                             <div>
                                 <p style="font-weight: 600; color: var(--gray-300);">Phone</p>
-                                <p style="font-weight: 500;">+91-XXXXXXXXXX</p>
+                                <p style="font-weight: 500;">+91-7500150462</p>
                             </div>
                         </div>
                         <div class="contact-item">
