--- a/client/internship.html
+++ b/client/internship.html
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Internship Section -->
-    <section id="internship" class="section-padding section-wrapper bg-light" style="margin-top: 80px;">
+    <section id="internship" class="section-padding section-wrapper bg-light content-offset">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Internship Program</h2>
@@ -104,10 +104,14 @@
                             <label class="form-label">Domain of Internship</label>
                             <select name="domain" required class="form-input">
                                 <option value="">Select Domain</option>
-                                <option value="Frontend Dev">Frontend Development</option>
-                                <option value="Web Dev">Web Development</option>
+                                <option value="Frontend Development">Frontend Development</option>
+                                <option value="Backend Development">Backend Development</option>
+                                <option value="Full Stack Development">Full Stack Development</option>
+                                <option value="App Development">App Development</option>
+                                <option value="UI/UX Design">UI/UX Design</option>
+                                <option value="Web Development">Web Development</option>
                                 <option value="Design & CAD">Design & CAD</option>
-                                <option value="Python Dev">Python Development</option>
+                                <option value="Python Development">Python Development</option>
 
                             </select>
                         </div>
