--- a/client/solutions.html
+++ b/client/solutions.html
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Services Section -->
-    <section id="services" class="section-padding section-wrapper bg-light" style="margin-top: 100px;">
+    <section id="services" class="section-padding section-wrapper bg-light content-offset">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Our Core Service Offerings</h2>
